# restcraft-template

./: LICENSE  README.md  pyproject.toml
restcraft_app/: __init__.py  settings.py
restcraft_app/services/: example_service.py
restcraft_app/views/: my_view.py
tests/: test_my_view.py
